--- a/controlldev/package.json
+++ b/controlldev/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
